# wieferich-prime-search

./: .pre-commit-config.yaml  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
src/wieferich_prime_search/: __init__.py  __main__.py  executor.py  local.py  main.py
src/wieferich_prime_search/data/: last_session_results.txt  latest_prime.txt
src/wieferich_prime_search/gui/: app.py  gui.tcss  widgets.py
